welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:4: error: type mismatch;
 found   : Array[java.awt.Color]
 required: Int
  var colors = new Array(read())
                             ^Array2:4: error: type mismatch;
 found   : Array[java.awt.Color]
 required: Int
  var colors = new Array(read())
                             ^