welcome.lessons.welcome.array.basics.Array2.scala.code
var worldHeight:Int = getWorldHeight()

override def run() {
  var colors = new Array(read())
}

def read():Array[Color] = {
  var colors = new Array[Color](worldHeight);
  
  for (i <- 0 to worldHeight - 1) {
    colors(i) = getGroundColor();
    forward()
  }
  backward(worldHeight-1);
  
  println(colors )
  return colors;
}